tests/deployment/backup-egress/fixtures/test-kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: memeloop-token-center-test
resources:
  - backup-egress
